# claudini

./: CLAUDE.md  pyproject.toml
.claude/skills/claudini/: SKILL.md
claudini/: base.py  input_spec.py  modal_app.py  run_bench.py
claudini/backends/: __init__.py  base.py  modal_backend.py  runpod.py
claudini/methods/claude_my_run/: AGENT_LOG.md  __init__.py
claudini/methods/claude_my_run/v1/: __init__.py  optimizer.py
claudini/methods/claude_my_run/v2/: __init__.py  optimizer.py
claudini/methods/claude_my_run/v3/: __init__.py  optimizer.py
claudini/methods/claude_my_run/v4/: __init__.py  optimizer.py
claudini/methods/claude_my_run/v5/: __init__.py  optimizer.py
claudini/methods/claude_my_run/v6/: __init__.py  optimizer.py
claudini/methods/claude_my_run/v7/: __init__.py  optimizer.py
claudini/methods/claude_my_run/v8/: __init__.py  optimizer.py
claudini/pipeline/: __init__.py  job.py  queue.py  submit.py  worker.py
configs/: demo_train_fast.yaml  random_train_q4.yaml
docs/: COST_LOG.md  MODAL_SETUP.md  PROJECT_PLAN.md  RUNPOD_SETUP.md  architecture.mmd
notebooks/: baseline_analysis.py
results/claude_my_run_v1/random_train_q4/Qwen2.5-7B-Instruct/: sample_0_seed_0.json  sample_1_seed_0.json  sample_2_seed_0.json  sample_3_seed_0.json  sample_4_seed_0.json
results/claude_my_run_v2/random_train_q4/Qwen2.5-7B-Instruct/: sample_0_seed_0.json  sample_1_seed_0.json  sample_2_seed_0.json
results/claude_my_run_v3/random_train_q4/Qwen2.5-7B-Instruct/: sample_0_seed_0.json  sample_1_seed_0.json  (+1 more)
scripts/: bootstrap.sh  run_remote.sh
(+26 files in other folders)
